@@ -51,6 +51,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 - `stockpiles`: now includes a library of useful stockpile configs (see docs for details)
 - `automelt`: now allows metal chests to be melted (workaround for DF bug 2493 is no longer needed)
 - `orders`: add minimize button to overlay panel so you can get it out of the way to read long statue descriptions when choosing a subject in the details screen
+- `enable`: can now interpret aliases defined with the `alias` command
 
 ## Documentation
 
